--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,9 @@
 
     <div class="container">
       <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+          <h1 class="header">Contact</h1>
+        </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="basic-addon1">Your name</span>
@@ -55,10 +58,24 @@
           </div>
         </div>
       </div>
-    <div class="form-group">
-        <span class="input-group-text col-lg-1 col-md-2 col-sm-2 col-xs-2" id="basic-addon1">Message</span>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="10" cols = "30" placeholder="150 characters"></textarea>
-    </div>
+      <div class="form-group">
+        <span
+          class="input-group-text col-lg-1 col-md-2 col-sm-2 col-xs-2"
+          id="basic-addon1"
+          >Message</span
+        >
+        <textarea
+          class="form-control"
+          id="exampleFormControlTextarea1"
+          rows="10"
+          cols="30"
+          placeholder="150 characters"
+        ></textarea>
+      </div>
+      <div class="footer">
+        <footer class="footer">
+          <h2>Copyright &copy; 2019</h2>
+        </footer>
       </div>
     </div>
 
