--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-          <h1>About Me</h1>
+          <h1 class="header">About Me</h1>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
           <img src="./assets/images/circuit-tree.png" alt="circuit tree" />
@@ -143,6 +143,9 @@
           </div>
         </div>
       </div>
+      <footer class="footer">
+        <h2>Copyright &copy; 2019</h2>
+      </footer>
     </div>
 
     <script
