--- a/portfolio.html
+++ b/portfolio.html
@@ -38,16 +38,13 @@
       </div>
     </nav>
     <div class="container">
-      <br />
-      <br />
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-          <h1>Portfolio</h1>
+          <h1 class="header">Portfolio</h1>
         </div>
       </div>
       <br />
-      <br />
-      <br />
+
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
           <div class="card" style="width: 18rem;">
@@ -128,6 +125,9 @@
           </div>
         </div>
       </div>
+      <footer class="footer">
+        <h2>Copyright &copy; 2019</h2>
+      </footer>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
