more updated files

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             alt="web development"
           />
         </div>
-        <div class="row">
+        <div class="row center-block">
           <div
             id="carouselExampleCaptions"
             class="carousel slide"
