--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
           placeholder="150 characters"
         ></textarea>
       </div>
-      <div class="footer">
+      <div class="footer col-lg-12 col-md-12 col-sm-12">
         <footer class="footer">
           <h2>Copyright &copy; 2019</h2>
         </footer>
