--- a/portfolio.html
+++ b/portfolio.html
@@ -125,9 +125,11 @@
           </div>
         </div>
       </div>
-      <footer class="footer">
-        <h2>Copyright &copy; 2019</h2>
-      </footer>
+      <div class="footer col-lg-12 col-md-12 col-sm-12">
+        <footer class="footer">
+          <h2>Copyright &copy; 2019</h2>
+        </footer>
+      </div>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
