--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
           <h1 class="header">About Me</h1>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-          <img src="./assets/images/circuit-tree.png" alt="circuit tree" />
+          <div class="d-flex justify-content-center">
+            <img src="./assets/images/circuit-tree.png" alt="circuit tree" />
+          </div>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
           <p class="paragraph">
@@ -58,7 +60,7 @@
             mobile app developement.
           </p>
         </div>
-        <div class="col-lg-9 col-md-9 col-sm-6 col-xs-12">
+        <div class="col-lg-9 col-md-8 col-sm-6 col-xs-12">
           <p class="paragraph">
             The technologies I know so far include HTML5, CSS3, JavaScript ES6,
             jQuery, and Bootsrap for responsive design. Technologies I am
@@ -69,11 +71,13 @@
             can dream it, we can build it (I know, I'm working on it).
           </p>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-          <img
-            src="./assets/images/web-development.jpeg"
-            alt="web development"
-          />
+        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          <div class="d-flex justify-content-center">
+            <img
+              src="./assets/images/web-development.jpeg"
+              alt="web development"
+            />
+          </div>
         </div>
         <div class="col-sm-12">
           <div class="d-flex justify-content-center">
