--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,9 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
           <h1 class="header">Contact</h1>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div
+          class="col-xs-12 col-sm-12 col-md-12 col-lg-12 d-flex align-items-start"
+        >
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="basic-addon1">Your name</span>
             <input type="text" class="form-control" placeholder="Full Name" />
@@ -51,7 +53,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div
+          class="col-xs-12 col-sm-12 col-md-12 col-lg-12 d-flex align-items-start"
+        >
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="basic-addon1">Your email</span>
             <input type="text" class="form-control" placeholder="Email" />
@@ -60,7 +64,7 @@
       </div>
       <div class="form-group">
         <span
-          class="input-group-text col-lg-1 col-md-2 col-sm-2 col-xs-2"
+          class="input-group-text col-lg-1 col-md-2 col-sm-2 col-xs-1"
           id="basic-addon1"
           >Message</span
         >
