--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
       <br />
 
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
           <div class="card" style="width: 18rem;">
             <img
               src="./assets/images/bugtracker.jpg"
@@ -61,7 +61,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
           <div class="card" style="width: 18rem;">
             <img
               src="./assets/images/games.png"
@@ -76,7 +76,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
           <div class="card" style="width: 18rem;">
             <img
               src="./assets/images/mobile.png"
@@ -91,7 +91,19 @@
             </div>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+          <div class="card" style="width: 18rem;">
+            <img src="./assets/images/rpg.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                One of the goals in the class is to create an RPG game using
+                JavaScript, so I am looking forward to learning those skills and
+                bring my game ideas to life.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
           <div class="card" style="width: 18rem;">
             <img
               src="./assets/images/webdev.png"
@@ -103,24 +115,6 @@
                 My main focus in my career is to design amazing and dynamic web
                 applications for clients and work remotely from anywhere.
               </p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
-            <div class="card" style="width: 18rem;">
-              <img
-                src="./assets/images/rpg.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <p class="card-text">
-                  One of the goals in the class is to create an RPG game using
-                  JavaScript, so I am looking forward to learning those skills
-                  and bring my game ideas to life.
-                </p>
-              </div>
             </div>
           </div>
         </div>
