--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
           <h1 class="header">Contact</h1>
         </div>
         <div
-          class="col-xs-12 col-sm-12 col-md-12 col-lg-12 d-flex align-items-start"
+          class="col-xs-12 col-sm-12 col-md-12 col-lg-12 d-flex align-items-left"
         >
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="basic-addon1">Your name</span>
@@ -53,8 +53,9 @@
         </div>
       </div>
       <div class="row">
+        <div class = "d-flex justify-content-left">
         <div
-          class="col-xs-12 col-sm-12 col-md-12 col-lg-12 d-flex align-items-start"
+          class="col-xs-12 col-sm-12 col-md-12 col-lg-12 d-flex align-items-left"
         >
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="basic-addon1">Your email</span>
@@ -62,12 +63,16 @@
           </div>
         </div>
       </div>
+    </div>
+      
       <div class="form-group">
+        <div class = "d-flex justify-content-left">
         <span
           class="input-group-text col-lg-1 col-md-2 col-sm-2 col-xs-1"
           id="basic-addon1"
           >Message</span
         >
+      </div>
         <textarea
           class="form-control"
           id="exampleFormControlTextarea1"
@@ -76,11 +81,11 @@
           placeholder="150 characters"
         ></textarea>
       </div>
-      <div class="footer col-lg-12 col-md-12 col-sm-12">
-        <footer class="footer">
-          <h2>Copyright &copy; 2019</h2>
-        </footer>
-      </div>
+    </div>
+    <div class="footer col-lg-12 col-md-12 col-sm-12">
+      <footer class="footer">
+        <h2>Copyright &copy; 2019</h2>
+      </footer>
     </div>
 
     <script
