--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,7 @@
 
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+          <div class = "d-flex justify-content-center">
           <div class="card" style="width: 18rem;">
             <img
               src="./assets/images/bugtracker.jpg"
@@ -61,7 +62,9 @@
             </div>
           </div>
         </div>
+      </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div class = "d-flex justify-content-center">
           <div class="card" style="width: 18rem;">
             <img
               src="./assets/images/games.png"
@@ -75,8 +78,10 @@
               </p>
             </div>
           </div>
+          </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div class = "d-flex justify-content-center">
           <div class="card" style="width: 18rem;">
             <img
               src="./assets/images/mobile.png"
@@ -90,8 +95,10 @@
               </p>
             </div>
           </div>
+          </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div class = "d-flex justify-content-center">
           <div class="card" style="width: 18rem;">
             <img src="./assets/images/rpg.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -102,8 +109,10 @@
               </p>
             </div>
           </div>
+          </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div class = "d-flex justify-content-center">
           <div class="card" style="width: 18rem;">
             <img
               src="./assets/images/webdev.png"
@@ -117,13 +126,14 @@
               </p>
             </div>
           </div>
+          </div>
         </div>
       </div>
-      <div class="footer col-lg-12 col-md-12 col-sm-12">
-        <footer class="footer">
-          <h2>Copyright &copy; 2019</h2>
-        </footer>
-      </div>
+    </div>
+    <div class="footer col-lg-12 col-md-12 col-sm-12">
+      <footer class="footer">
+        <h2>Copyright &copy; 2019</h2>
+      </footer>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
