new years commit

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,10 @@
         </div>
       </div>
     </nav>
+    <br />
+    <br />
+    <br />
+    <br />
     <div class="container">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
@@ -47,85 +51,89 @@
 
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-          <div class = "d-flex justify-content-center">
-          <div class="card" style="width: 18rem;">
-            <img
-              src="./assets/images/bugtracker.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <p class="card-text">
-                This project is what I want to build to show employers my
-                competency in programming. Coming slowly but surely!
-              </p>
+          <div class="d-flex justify-content-center">
+            <div class="card" style="width: 18rem;">
+              <img
+                src="./assets/images/bugtracker.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  This project is what I want to build to show employers my
+                  competency in programming. Coming slowly but surely!
+                </p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-            <div class = "d-flex justify-content-center">
-          <div class="card" style="width: 18rem;">
-            <img
-              src="./assets/images/games.png"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <p class="card-text">
-                One goal that I have in life is to successfully create a game
-                using programming language and showing it off.
-              </p>
+          <div class="d-flex justify-content-center">
+            <div class="card" style="width: 18rem;">
+              <img
+                src="./assets/images/games.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  One goal that I have in life is to successfully create a game
+                  using programming language and showing it off.
+                </p>
+              </div>
             </div>
-          </div>
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-            <div class = "d-flex justify-content-center">
-          <div class="card" style="width: 18rem;">
-            <img
-              src="./assets/images/mobile.png"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <p class="card-text">
-                One day I hope to learn how to build mobile applications and
-                sell them. Mobile apps coming after web developement!
-              </p>
+          <div class="d-flex justify-content-center">
+            <div class="card" style="width: 18rem;">
+              <img
+                src="./assets/images/mobile.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  One day I hope to learn how to build mobile applications and
+                  sell them. Mobile apps coming after web developement!
+                </p>
+              </div>
             </div>
-          </div>
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-            <div class = "d-flex justify-content-center">
-          <div class="card" style="width: 18rem;">
-            <img src="./assets/images/rpg.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <p class="card-text">
-                One of the goals in the class is to create an RPG game using
-                JavaScript, so I am looking forward to learning those skills and
-                bring my game ideas to life.
-              </p>
+          <div class="d-flex justify-content-center">
+            <div class="card" style="width: 18rem;">
+              <img
+                src="./assets/images/rpg.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  One of the goals in the class is to create an RPG game using
+                  JavaScript, so I am looking forward to learning those skills
+                  and bring my game ideas to life.
+                </p>
+              </div>
             </div>
-          </div>
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-            <div class = "d-flex justify-content-center">
-          <div class="card" style="width: 18rem;">
-            <img
-              src="./assets/images/webdev.png"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <p class="card-text">
-                My main focus in my career is to design amazing and dynamic web
-                applications for clients and work remotely from anywhere.
-              </p>
+          <div class="d-flex justify-content-center">
+            <div class="card" style="width: 18rem;">
+              <img
+                src="./assets/images/webdev.png"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <p class="card-text">
+                  My main focus in my career is to design amazing and dynamic
+                  web applications for clients and work remotely from anywhere.
+                </p>
+              </div>
             </div>
-          </div>
           </div>
         </div>
       </div>
